Moved test set up for inputting player names into helper file

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,3 @@
 <div><%= @player_1_name %></div>
 <div><%= @player_2_name %></div>
-<div><%= Player 2's hit points: 20 %></div>
+<div><%= "Player 2's hit points: 20" %></div>
