Adds attack player 2 button

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,6 @@
 <div><%= @player_1_name %></div>
+<form action="/attack" method="get">
+  <input type='submit' value='Attack Player 2'>
+</form>
 <div><%= @player_2_name %></div>
 <div><%= "Player 2's hit points: 20" %></div>
